change into the application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Image-App
 server.port=6070
-spring.datasource.url=jdbc:mysql://localhost:3306/image_uploading
+spring.datasource.url=${AIVEN_URI}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=Himanshu@123
+spring.datasource.username=${USER_NAME}
+spring.datasource.password=${USER_PASSWORD}
  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
  
 spring.jpa.hibernate.ddl-auto=update
@@ -14,6 +14,6 @@ server.servlet.session.tracking-modes=cookie
  
  
  # Cloudinary config
-cloudinary.cloud-name= dwigceooi
-cloudinary.api-key= 314949864317374
-cloudinary.api-secret= tCMsHIpxUM89KxHeFrzBXKfeGLQ
+cloudinary.cloud-name=${CLOUDINARY_NAME}
+cloudinary.api-key=${CLOUDINARY_API_KEY}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET}
